# End2End-ML-Workflow

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.MD  go.mod  go.sum  main.go
backend/api/data/: data.go
backend/api/data/v1/: data.go
backend/api/hello/: hello.go
backend/api/hello/v1/: hello.go
backend/api/model/: model.go
backend/api/model/v1/: model.go
backend/api/predict/: predict.go
backend/api/predict/v1/: predict.go
backend/api/system/: system.go
backend/api/system/v1/: system.go
backend/internal/cmd/: cmd.go
backend/internal/controller/data/: data.go  data_new.go  data_v1_data_info.go  (+3 more)
backend/internal/middleware/: commonResponse.go
backend/manifest/config/: config.yaml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: data.ts  model.ts  predict.ts  settings.ts  system.ts
frontend/src/utils/: localPredictor.ts  modelStorage.ts
frontend/src/views/: InstructionsView.vue  ModelView.vue  SettingsView.vue  WorkflowView.vue
ml_model/: .gitignore  MULTI_WORKER_README.md  README.md  __init__.py  gunicorn_config.py  main.py  pyproject.toml  run.py  start_server.py  test_api.py  test_fix.py  test_prediction.py
ml_model/api/: __init__.py  ml_api.py
ml_model/config/: __init__.py  settings.py
ml_model/data/: __init__.py  data_processor.py
ml_model/models/: __init__.py  model_trainer.py  predictor.py
ml_model/utils/: __init__.py  helpers.py
(+33 files in other folders)
